--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "knqtt-node",
+  "name": "google-drive-clone",
   "version": "1.0.0",
-  "description": "This is a Authentication service using Node.js, Express, and TypeScript.",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@quixo3/prisma-session-store": "^3.1.13",
@@ -25,6 +29,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.18.0",
@@ -32,10 +37,18 @@
     "@types/node": "^22.7.5",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1"
   }
 }
-
